scripts/tests/errors/err_throw_no_try.bu
// Test: throw without try
// Expected: runtime error (uncaught exception)

throw "boom";
